--- a/tueomeu.html
+++ b/tueomeu.html
@@ -6,7 +6,7 @@
     <body>
         
         <img class="palacio" src="brb.png" width='350px'/>
-        <h1>tu é o meu</h1>
+        <h1>Vinicius ''BRB'' Moraes</h1>
     <img class="logo" src='high.png'/>
     </body>
 </html>
