--- a/tueomeu.html
+++ b/tueomeu.html
@@ -4,9 +4,10 @@
         <link rel='stylesheet' href="tueomeu.css">
     </head>
     <body>
-        
+    <div class="logo" >
         <img class="palacio" src="brb.png" width='350px'/>
         <h1>Vinicius ''BRB'' Moraes</h1>
-    <img class="logo" src='high.png'/>
+        <a href="https://www.instagram.com/preserve.streetwear" target="_blank"><img src='high.png' /></a>
+    </div>
     </body>
 </html>
