--- a/tueomeu.html
+++ b/tueomeu.html
@@ -4,10 +4,14 @@
         <link rel='stylesheet' href="tueomeu.css">
     </head>
     <body>
-    <div class="logo" >
+    <div class="logo">
         <img class="palacio" src="brb.png" width='350px'/>
         <h1>Vinicius ''BRB'' Moraes</h1>
         <a href="https://www.instagram.com/preserve.streetwear" target="_blank"><img src='high.png' /></a>
     </div>
+    <video width="800" controls>
+        <source src="brb.mp4" type="video/mp4">
+        Your browser does not support HTML video.
+      </video>
     </body>
 </html>
