--- a/tueomeu.html
+++ b/tueomeu.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Nosso amigo brb</title>
+        <link rel="icon" type="image/x-icon" href="proibido-fumar.png">
         <link rel='stylesheet' href="tueomeu.css">
     </head>
     <body>
     <div class="logo">
         <img class="palacio" src="brb.png" width='350px'/>
         <h1>Vinicius ''BRB'' Moraes</h1>
+        <h2>Clique Aqui  </h2>
+        <h1>     ⇩ </h1>
         <a href="https://www.instagram.com/preserve.streetwear" target="_blank"><img src='high.png' /></a>
     </div>
     <video width="800" controls>
