--- a/tueomeu.html
+++ b/tueomeu.html
@@ -4,6 +4,9 @@
         <title>Nosso amigo brb</title>
         <link rel="icon" type="image/x-icon" href="proibido-fumar.png">
         <link rel='stylesheet' href="tueomeu.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
     <div class="logo">
