--- a/index.html
+++ b/index.html
@@ -2,31 +2,24 @@
 <html>
     <head>
         <title>Nosso amigo brb</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="icon" type="image/x-icon" href="proibido-fumar.png">
         <link rel='stylesheet' href="tueomeu.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
     <div class="logo">
         <img class="palacio" src="brb.png" width='350px'/>
-        <h1>Vinicius ''BRB'' Moraes</h1>
-        <h2>Clique Aqui  </h2>
-        <h1>     ⇩ </h1>
+        <h1>Vinicius ''BRB'' Morais</h1>
+        <h2>Clique Aqui</h2>
+        <h1>⇩</h1>
         <a href="https://www.instagram.com/preserve.streetwear" target="_blank"><img src='high.png' /></a>
+        <audio controls autoplay>
+            <source src="brb.mp3" type="audio/mpeg">
+        </audio>
     </div>
     <video width="800" controls>
         <source src="brb.mp4" type="video/mp4">
         Your browser does not support HTML video.
       </video>
-      <audio controls id="audiobrb" autoplay>
-        <source src="brb.mp3" type="audio/ogg">
-      Your browser does not support the audio element.
-      </audio>
-      <script>
-        var audio = document.getElementById("audiobrb");
-        audio.volume = 0.05;
-      </script>
     </body>
 </html>
